Fix spacing

--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -1,9 +1,26 @@
 @import '../styles/variables';
 
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  width: 100%;
+  right: 0;
+  left: 0;
   font-family: $font-primary;
   color: $color-secondary;
   padding: 24px;
+
+  @media screen and (min-width: 768px) {
+    bottom: 0;
+    padding: 4px 24px;
+  }
+
+  @media screen and (min-width: 848px) {
+    padding: 24px;
+  }
 
   &__icons {
     display: flex;
